<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/about_background"
    android:scrollbars="vertical" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/note_clock_background" >
    
    <ImageView android:id="@+id/blue"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_background"
        android:contentDescription="@string/blueDescription"/>
    
    <TextView android:id="@+id/blueText"
        style="@style/wood_note_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/blueText"/>
    
    <ImageButton android:id="@+id/createClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/note_clocksave_selector"
        android:layout_toLeftOf="@id/blueText"
        android:layout_marginTop="10dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/woodDescription"/>
    
    <ImageButton android:id="@+id/exitClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/note_clockfinish_selector"
        android:layout_toRightOf="@id/blueText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="60dp"
        android:contentDescription="@string/woodDescription"/>
    
    <Button
        android:id="@+id/signsClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/blue" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/signsClock"/>

    <Button
        android:id="@+id/titleClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/signsClock" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/titleClock"/>

    <Button
        android:id="@+id/datePicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="5dp"
        android:layout_below="@id/titleClock" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/datePicker"/>

    <Button
        android:id="@+id/timePicker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/datePicker" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/timePicker"/>
    
    <Button
        android:id="@+id/weeksClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/timePicker" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/weeksClock"/>
    
    <Button
        android:id="@+id/intervalClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/weeksClock" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/intervalClock"/>
    
    <Button
        android:id="@+id/bellsClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/intervalClock" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/bellsClock"/>
    
    <Button
        android:id="@+id/shockClock"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@id/bellsClock" 
        android:background="@drawable/note_clockadd_button_selector"
        android:text="@string/shockClock"/>
    
</RelativeLayout>
</ScrollView>