<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/note_note_background" >

    <ImageView
        android:id="@+id/wood"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/wood_background"
        android:contentDescription="@string/woodDescription" />

    <TextView
        android:id="@+id/woodText"
        style="@style/wood_note_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="10dp"
        android:text="@string/woodText" />

    <ImageButton
        android:id="@+id/createNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@id/woodText"
        android:background="@drawable/note_noteadd_selector"
        android:contentDescription="@string/woodDescription" />

    <ImageButton
        android:id="@+id/exitNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/woodText"
        android:background="@drawable/note_notefinish_selector"
        android:contentDescription="@string/woodDescription" />

    <TextView
        android:id="@+id/delteText"
        style="@style/other_note_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wood"
        android:layout_centerHorizontal="true"
        android:padding="3dp"
        android:text="@string/note_list_delete" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/list_item_bg"
        android:layout_below="@id/delteText"
        android:layout_above="@id/adview"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >
    </ListView>

    <com.tencent.mobwin.AdView
        xmlns:mobwin="http://mobwin.android.com/apk/res/sid.note"
        android:id="@+id/adview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        mobwin:backAlpha="180"
        mobwin:textColor="#ffff3333"
        mobwin:titleColor="#ff00aa00" >
    </com.tencent.mobwin.AdView>

</RelativeLayout>